--- a/src/app/check-list/check-list.component.html
+++ b/src/app/check-list/check-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 			<div class="col-md-12">
-					<h1 class="table-top">CheckLists
+					<h1 class="table-top">CheckLists &nbsp; 
 					<button class="btn btn-success table-top-button"
 						[routerLink]="['add-equipment']">				
 						<i class="fa fa-plus"></i>
